Добавляет наших клиентов

--- a/index.html
+++ b/index.html
@@ -41,10 +41,20 @@
 
         <ul class="contact-header">
           <li class="contact-header-item margin-right">
-            <a class="contact-header-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contact-header-link" href="mailto:info@devstudio.com">
+              <svg class="contact-header-link-icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-mail"></use>
+              </svg>
+              info@devstudio.com</a
+            >
           </li>
           <li class="contact-header-item">
-            <a class="contact-header-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="contact-header-link" href="tel:+380961111111">
+              <svg class="contact-header-link-icon" width="10" height="16">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -167,6 +177,49 @@
                 <h3 class="team-card-title">Михаил Ермаков</h3>
                 <p class="team-card-text" lang="en">UI Designer</p>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="clients section">
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="clients-list">
+            <li class="clients-item">
+              <a class="clients-item-link" href=""
+                ><svg class="clients-item-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-Logo1"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-item-link" href=""
+                ><svg class="clients-item-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-Logo2"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-item-link" href=""
+                ><svg class="clients-item-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-Logo3"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-item-link" href=""
+                ><svg class="clients-item-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-Logo4"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-item-link" href=""
+                ><svg class="clients-item-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-Logo5"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-item-link" href=""
+                ><svg class="clients-item-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-Logo6"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
