--- a/index.html
+++ b/index.html
@@ -155,6 +155,32 @@
               <div class="team-card-container">
                 <h3 class="team-card-title">Игорь Демьяненко</h3>
                 <p class="team-card-text" lang="en">Product Designer</p>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a class="social-list-link" href=""
+                      ><svg class="social-list-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href=""
+                      ><svg class="social-list-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href=""
+                      ><svg class="social-list-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href=""
+                      ><svg class="social-list-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -162,6 +188,32 @@
               <div class="team-card-container">
                 <h3 class="team-card-title">Ольга Репина</h3>
                 <p class="team-card-text" lang="en">Frontend Developer</p>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a class="social-list-link" href=""
+                      ><svg class="social-list-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href=""
+                      ><svg class="social-list-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href=""
+                      ><svg class="social-list-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href=""
+                      ><svg class="social-list-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -169,6 +221,32 @@
               <div class="team-card-container">
                 <h3 class="team-card-title">Николай Тарасов</h3>
                 <p class="team-card-text" lang="en">Marketing</p>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a class="social-list-link" href=""
+                      ><svg class="social-list-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href=""
+                      ><svg class="social-list-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href=""
+                      ><svg class="social-list-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href=""
+                      ><svg class="social-list-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -176,6 +254,32 @@
               <div class="team-card-container">
                 <h3 class="team-card-title">Михаил Ермаков</h3>
                 <p class="team-card-text" lang="en">UI Designer</p>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a class="social-list-link" href=""
+                      ><svg class="social-list-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href=""
+                      ><svg class="social-list-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href=""
+                      ><svg class="social-list-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href=""
+                      ><svg class="social-list-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
