--- a/index.html
+++ b/index.html
@@ -333,28 +333,65 @@
     <!-- Футер -->
     <footer class="site-footer">
       <div class="container">
-        <a class="logo" href="./index.html">Web<span class="logo-white">Studio</span></a>
+        <div class="footer-container">
+          <div class="address-container">
+            <a class="logo" href="./index.html">Web<span class="logo-white">Studio</span></a>
 
-        <!-- Контакты -->
-        <address class="address">
-          <ul class="contact-footer">
-            <li class="contact-footer-item">
-              <a class="contact-footer-link" href="https://goo.gl/maps/V5BgEMV831Q8AJGa7"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </li>
-            <li class="contact-footer-item">
-              <a class="contact-footer-link transparent" href="mailto:info@example.com"
-                >info@example.com</a
-              >
-            </li>
-            <li class="contact-footer-item">
-              <a class="contact-footer-link transparent" href="tel:+380991111111"
-                >+38 099 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
+            <!-- Контакты -->
+            <address class="address">
+              <ul class="contact-footer">
+                <li class="contact-footer-item">
+                  <a class="contact-footer-link" href="https://goo.gl/maps/V5BgEMV831Q8AJGa7"
+                    >г. Киев, пр-т Леси Украинки, 26</a
+                  >
+                </li>
+                <li class="contact-footer-item">
+                  <a class="contact-footer-link transparent" href="mailto:info@example.com"
+                    >info@example.com</a
+                  >
+                </li>
+                <li class="contact-footer-item">
+                  <a class="contact-footer-link transparent" href="tel:+380991111111"
+                    >+38 099 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="footer-social">
+            <p class="footer-social-text">Присоединяйтесь</p>
+            <ul class="footer-social-list">
+              <li class="footer-social-item">
+                <a class="footer-social-item-link" href="">
+                  <svg class="footer-social-link-icon" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a class="footer-social-item-link" href="">
+                  <svg class="footer-social-link-icon" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a class="footer-social-item-link" href="">
+                  <svg class="footer-social-link-icon" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a class="footer-social-item-link" href="">
+                  <svg class="footer-social-link-icon" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
