--- a/index.html
+++ b/index.html
@@ -362,29 +362,29 @@
             <p class="footer-social-text">Присоединяйтесь</p>
             <ul class="footer-social-list">
               <li class="footer-social-item">
-                <a class="footer-social-item-link" href="">
-                  <svg class="footer-social-link-icon" width="20px" height="20px">
+                <a class="footer-social-link" href="">
+                  <svg class="footer-social-icon" width="20px" height="20px">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-social-item">
-                <a class="footer-social-item-link" href="">
-                  <svg class="footer-social-link-icon" width="20px" height="20px">
+                <a class="footer-social-link" href="">
+                  <svg class="footer-social-icon" width="20px" height="20px">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-social-item">
-                <a class="footer-social-item-link" href="">
-                  <svg class="footer-social-link-icon" width="20px" height="20px">
+                <a class="footer-social-link" href="">
+                  <svg class="footer-social-icon" width="20px" height="20px">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-social-item">
-                <a class="footer-social-item-link" href="">
-                  <svg class="footer-social-link-icon" width="20px" height="20px">
+                <a class="footer-social-link" href="">
+                  <svg class="footer-social-icon" width="20px" height="20px">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
