изменяет название классов

--- a/index.html
+++ b/index.html
@@ -290,38 +290,38 @@
           <h2 class="section-title">Постоянные клиенты</h2>
           <ul class="clients-list">
             <li class="clients-item">
-              <a class="clients-item-link" href=""
-                ><svg class="clients-item-icon" width="106" height="60">
+              <a class="clients-link" href=""
+                ><svg class="clients-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-Logo1"></use></svg
               ></a>
             </li>
             <li class="clients-item">
-              <a class="clients-item-link" href=""
-                ><svg class="clients-item-icon" width="106" height="60">
+              <a class="clients-link" href=""
+                ><svg class="clients-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-Logo2"></use></svg
               ></a>
             </li>
             <li class="clients-item">
-              <a class="clients-item-link" href=""
-                ><svg class="clients-item-icon" width="106" height="60">
+              <a class="clients-link" href=""
+                ><svg class="clients-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-Logo3"></use></svg
               ></a>
             </li>
             <li class="clients-item">
-              <a class="clients-item-link" href=""
-                ><svg class="clients-item-icon" width="106" height="60">
+              <a class="clients-link" href=""
+                ><svg class="clients-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-Logo4"></use></svg
               ></a>
             </li>
             <li class="clients-item">
-              <a class="clients-item-link" href=""
-                ><svg class="clients-item-icon" width="106" height="60">
+              <a class="clients-link" href=""
+                ><svg class="clients-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-Logo5"></use></svg
               ></a>
             </li>
             <li class="clients-item">
-              <a class="clients-item-link" href=""
-                ><svg class="clients-item-icon" width="106" height="60">
+              <a class="clients-link" href=""
+                ><svg class="clients-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-Logo6"></use></svg
               ></a>
             </li>
