--- a/index.html
+++ b/index.html
@@ -76,36 +76,44 @@
           <h2 class="section-title visually-hidden">Особенности</h2>
           <ul class="features-list">
             <li class="features-item">
-              <svg class="features-item-icon">
-                <use href="./images/icons.svg#icon-antenna"></use>
-              </svg>
+              <div class="features-icon-container">
+                <svg width="70px" height="70px">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-list-title">Внимание к деталям</h3>
               <p class="features-list-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="features-item">
-              <svg class="features-item-icon">
-                <use href="./images/icons.svg#icon-clock"></use>
-              </svg>
+              <div class="features-icon-container">
+                <svg width="70px" height="70px">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-list-title">Пунктуальность</h3>
               <p class="features-list-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="features-item">
-              <svg class="features-item-icon">
-                <use href="./images/icons.svg#icon-diagram"></use>
-              </svg>
+              <div class="features-icon-container">
+                <svg width="70px" height="70px">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="features-list-title">Планирование</h3>
               <p class="features-list-text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="features-item">
-              <svg class="features-item-icon">
-                <use href="./images/icons.svg#icon-astronaut"></use>
-              </svg>
+              <div class="features-icon-container">
+                <svg width="70px" height="70px">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-list-title">Современные технологии</h3>
               <p class="features-list-text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
