--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
           </ul>
           <ul class="portfolio-list">
             <li class="portfolio-card">
-              <a href="#">
+              <a class="portfolio-card-link" href="#">
                 <img
                   src="./images/portfolio/portfolio1.jpg"
                   alt="Пример проекта Веб-сайт"
@@ -97,7 +97,7 @@
               >
             </li>
             <li class="portfolio-card">
-              <a href="#"
+              <a class="portfolio-card-link" href="#"
                 ><img
                   src="./images/portfolio/portfolio2.jpg"
                   alt="Пример проекта Дизайн"
@@ -112,7 +112,7 @@
               >
             </li>
             <li class="portfolio-card">
-              <a href="#"
+              <a class="portfolio-card-link" href="#"
                 ><img
                   src="./images/portfolio/portfolio3.jpg"
                   alt="Пример проекта Приложение"
@@ -125,7 +125,7 @@
               >
             </li>
             <li class="portfolio-card">
-              <a href="#"
+              <a class="portfolio-card-link" href="#"
                 ><img
                   src="./images/portfolio/portfolio4.jpg"
                   alt="Пример проекта Маркетинг"
@@ -138,7 +138,7 @@
               >
             </li>
             <li class="portfolio-card">
-              <a href="#"
+              <a class="portfolio-card-link" href="#"
                 ><img
                   src="./images/portfolio/portfolio5.jpg"
                   alt="Пример проекта Приложение"
@@ -151,7 +151,7 @@
               >
             </li>
             <li class="portfolio-card">
-              <a href="#"
+              <a class="portfolio-card-link" href="#"
                 ><img
                   src="./images/portfolio/portfolio6.jpg"
                   alt="Пример проекта Веб-сайт"
@@ -164,7 +164,7 @@
               >
             </li>
             <li class="portfolio-card">
-              <a href="#"
+              <a class="portfolio-card-link" href="#"
                 ><img
                   src="./images/portfolio/portfolio7.jpg"
                   alt="Пример проекта Дизайн"
@@ -179,7 +179,7 @@
               >
             </li>
             <li class="portfolio-card">
-              <a href="#"
+              <a class="portfolio-card-link" href="#"
                 ><img
                   src="./images/portfolio/portfolio8.jpg"
                   alt="Пример проекта Маркетинг"
@@ -192,7 +192,7 @@
               >
             </li>
             <li class="portfolio-card">
-              <a href="#"
+              <a class="portfolio-card-link" href="#"
                 ><img
                   src="./images/portfolio/portfolio9.jpg"
                   alt="Пример проекта Приложение"
